# origin

./: .gitignore
Final/: CMakeLists.txt  CreateVeachels.cpp  CreateVeachels.h  Final project.sln  Final project.vcxproj  Final project.vcxproj.filters  Race.cpp  Race.h  Race_info.h  Registration.cpp  Registration.h  Vehicles.cpp  Vehicles.h  main.cpp
Lesson 02 (structures)/task 2.3 (city address)/: task 2.3 (city address).sln
Lesson 03 (classes)/3.1 calc/: 3.1 calc.sln
Lesson 03 (classes)/3.2 count/: 3.2 count.sln
Lesson 05 (Child)/5.1 (figure 3 and 4)/: 5.1 (figure 3 and 4).sln
Lesson 06 (files poject)/6.1 (math functions)/: 6.1 (math functions).sln
Lesson 07 (macro)/7.1 (macro)/: 7.1 (macro).sln
Lesson 08 (exept)/L8.1 (simple exept)/: L8.1 (simple exept).sln
Lesson 08 (exept)/L8.2(exept constr)/: L8.2(exept constr).sln
Lesson 10 (CMake)/L10.1 (simple cmake)/: CMakeLists.txt  L10.1 (simple cmake).cpp  L10.1 (simple cmake).h
Lesson 10 (CMake)/L10.2 (harder cmake)/: CMakeLists.txt
Lesson 11 (files)/L11.2/: L11.2.sln
Lesson 11 (files)/L11.3/: CMakeLists.txt  L11.2.cpp  Leaver.cpp  Leaver.h
Lesson 11 (files)/L11.4/: Project.sln
Lesson 11 (files)/L11.5/: 6.3.cpp  CMakeLists.txt  print_info.h
Lesson 2 (structures)/task 2.1/: task 2.1.sln
Lesson 2 (structures)/task 2.2 (bank account)/: task 2.2 (bank account).sln
Lesson 4 (OOP1)/4.1 addreses/: 4.1 addreses.sln
Lesson 4 (OOP1)/4.2 (sort addres)/: 4.2 (sort addres).sln
Lesson 5 (Child)/5.2 figure++/: 5.2 figure++.sln
Lesson 6 (files poject)/6.2 (class)/: 6.2 (class).sln
(+111 files in other folders)
